--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,8 +27,23 @@
     <filter-mapping>
     	<filter-name>openSessionInViewFilter</filter-name>
     	<url-pattern>/*</url-pattern>
-
-    </filter-mapping> 
+    </filter-mapping>
+		<!-- apche shiro -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<!-- 通过代理模式，在shiro中调用spring容器中的bean -->
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+    
+    
 	<!--3.struts2核心控制器的配置-->
 	 <filter>
     	<filter-name>struts2</filter-name>
