--- a/pom.xml
+++ b/pom.xml
@@ -244,5 +244,27 @@
   </dependencies>
   <build>
     <finalName>jk0505</finalName>
+  	<plugins>
+  		<!-- 运行 tomcat:run -->
+  		<plugin>
+  			<groupId>org.codehaus.mojo</groupId>
+  			<artifactId>tomcat-maven-plugin</artifactId>
+  			<version>1.1</version>
+  			<!-- 修改端口 -->
+  			<configuration>
+  				<port>80</port>
+  			</configuration>
+  		</plugin>
+  		<!-- 运行 tomcat7:run -->
+  		<plugin>
+  			<groupId>org.apache.tomcat.maven</groupId>
+  			<artifactId>tomcat7-maven-plugin</artifactId>
+  			<version>2.1</version>
+  			<configuration>
+  			<port>7878</port>
+  			</configuration>
+  		</plugin>
+  	</plugins>
   </build>
+
 </project>
